; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_lwp.c___lwp_sysinit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_lwp.c___lwp_sysinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@_lwp_thr_objects = common dso_local global i32 0, align 4
@LWP_MAX_THREADS = common dso_local global i32 0, align 4
@_lwp_tqueue_objects = common dso_local global i32 0, align 4
@LWP_MAX_TQUEUES = common dso_local global i32 0, align 4
@_thr_idle = common dso_local global %struct.TYPE_8__* null, align 8
@TRUE = common dso_local global i32 0, align 4
@_thr_heir = common dso_local global %struct.TYPE_8__* null, align 8
@_thr_executing = common dso_local global %struct.TYPE_8__* null, align 8
@idle_func = common dso_local global i8* null, align 8
@_thr_main = common dso_local global %struct.TYPE_8__* null, align 8
@__stack_end = common dso_local global i32* null, align 8
@__stack_addr = common dso_local global i64 0, align 8
@__crtmain = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__lwp_sysinit() #0 {
  %1 = load i32, i32* @LWP_MAX_THREADS, align 4
  %2 = call i32 @__lwp_objmgr_initinfo(i32* @_lwp_thr_objects, i32 %1, i32 4)
  %3 = load i32, i32* @LWP_MAX_TQUEUES, align 4
  %4 = call i32 @__lwp_objmgr_initinfo(i32* @_lwp_tqueue_objects, i32 %3, i32 4)
  %5 = call i64 @__lwp_objmgr_allocate(i32* @_lwp_thr_objects)
  %6 = inttoptr i64 %5 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %6, %struct.TYPE_8__** @_thr_idle, align 8
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** @_thr_idle, align 8
  %8 = load i32, i32* @TRUE, align 4
  %9 = call i32 @__lwp_thread_init(%struct.TYPE_8__* %7, i32* null, i64 0, i32 255, i32 0, i32 %8)
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** @_thr_idle, align 8
  store %struct.TYPE_8__* %10, %struct.TYPE_8__** @_thr_heir, align 8
  store %struct.TYPE_8__* %10, %struct.TYPE_8__** @_thr_executing, align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** @_thr_idle, align 8
  %12 = load i8*, i8** @idle_func, align 8
  %13 = call i32 @__lwp_thread_start(%struct.TYPE_8__* %11, i8* %12, i32* null)
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** @_thr_idle, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  %16 = call i32 @__lwp_objmgr_open(i32* @_lwp_thr_objects, i32* %15)
  %17 = call i64 @__lwp_objmgr_allocate(i32* @_lwp_thr_objects)
  %18 = inttoptr i64 %17 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %18, %struct.TYPE_8__** @_thr_main, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** @_thr_main, align 8
  %20 = load i32*, i32** @__stack_end, align 8
  %21 = load i64, i64* @__stack_addr, align 8
  %22 = load i32*, i32** @__stack_end, align 8
  %23 = ptrtoint i32* %22 to i64
  %24 = sub nsw i64 %21, %23
  %25 = load i32, i32* @TRUE, align 4
  %26 = call i32 @__lwp_thread_init(%struct.TYPE_8__* %19, i32* %20, i64 %24, i32 191, i32 0, i32 %25)
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** @_thr_main, align 8
  %28 = load i64, i64* @__crtmain, align 8
  %29 = inttoptr i64 %28 to i8*
  %30 = call i32 @__lwp_thread_start(%struct.TYPE_8__* %27, i8* %29, i32* null)
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** @_thr_main, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 0
  %33 = call i32 @__lwp_objmgr_open(i32* @_lwp_thr_objects, i32* %32)
  ret void
}

declare dso_local i32 @__lwp_objmgr_initinfo(i32*, i32, i32) #1

declare dso_local i64 @__lwp_objmgr_allocate(i32*) #1

declare dso_local i32 @__lwp_thread_init(%struct.TYPE_8__*, i32*, i64, i32, i32, i32) #1

declare dso_local i32 @__lwp_thread_start(%struct.TYPE_8__*, i8*, i32*) #1

declare dso_local i32 @__lwp_objmgr_open(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
